--- a/build.gradle
+++ b/build.gradle
@@ -49,9 +49,9 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+    //    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+      //  compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+   //     compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
     }
 }
 
